[gd_scene load_steps=2 format=3 uid="uid://djt7w080i2bkg"]

[ext_resource type="Script" uid="uid://qpid6hpxfqsm" path="res://control.gd" id="1_0fbet"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fbet")

[node name="Tree" type="Tree" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.029
anchor_bottom = 0.05
offset_left = 145.0
offset_top = 12.0
offset_right = 471.592
offset_bottom = 316.6
allow_search = false
enable_recursive_folding = false
scroll_horizontal_enabled = false
scroll_vertical_enabled = false
auto_tooltip = false

[node name="Button_Container" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Add_Command" type="Button" parent="Button_Container"]
layout_mode = 2
text = "c"

[node name="Add_Folder" type="Button" parent="Button_Container"]
layout_mode = 2
text = "f"
